[package]
name = "tabster"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
authors = ["luoxiaozero"]
description = "Web Application Keyboard Navigation Tools"
homepage = "https://github.com/thaw-ui/tabster"
repository = "https://github.com/thaw-ui/tabster"
license = "MIT"

[dependencies]
web-sys = { version = "0.3.72", features = [
    "Document",
    "Window",
    "CssStyleDeclaration",
    "DomRect",
    "KeyboardEvent",
    "HtmlElement",
    "TreeWalker",
    "NodeFilter",
    "console",
] }
uuid = { version = "1.11.0", features = ["v4", "js"] }