[package]
name = "tabster"
version = "0.0.0"
edition = "2021"
readme = "./README.md"
authors = ["luoxiaozero"]
description = "Web Application Keyboard Navigation Tools"
homepage = "https://github.com/thaw-ui/tabster"
repository = "https://github.com/thaw-ui/tabster"
license = "MIT"

[dependencies]
web-sys = { version = "0.3.70", features = [
    "Document",
    "Window",
    "CssStyleDeclaration",
    "DomRect",
    "KeyboardEvent",
    "HtmlElement",
    "TreeWalker",
    "NodeFilter",
    "NodeList",
    "MutationObserver",
    "MutationObserverInit",
    "MutationRecord",
    "SvgElement",
    "console",
] }
uuid = { version = "1.11.0", features = ["v4", "js"] }
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.132"